# cplusplus-practice

cplusplus-practice/: CMakeLists.txt  main.cpp
cplusplus-practice/competitive_programming/: binary_gap.h  coin_change.h  convert_base.h  invert_binary_search_tree.h  max_counters.h  min_max_division.h  minimum_coin_change.h  missing_integer.h  odd_occurrences_in_array.h  perm_missing_elem.h
cplusplus-practice/competitive_programming/algorithm/dynamic_programming/: longest_increasing_subsequence.h  minimum_coin_change.h
cplusplus-practice/competitive_programming/algorithm/interval/: meeting_room_scheduling.h
cplusplus-practice/competitive_programming/algorithm/permutation/: generate_perm.h
cplusplus-practice/competitive_programming/array_string/: anagram_group.h  is_unique.h  palindrome_permutation.h  rotate_matrix.h  spiral_matrix.h  subarray_given_sum.h
cplusplus-practice/competitive_programming/data_structure/graph/: travel_undirected_graph.h
cplusplus-practice/competitive_programming/data_structure/linked_list/: linked_lists_intersection.h  return_k_to_last.h  reverse_linked_list.h
cplusplus-practice/competitive_programming/linked_list/: remove_dups.h  return_k_to_last.h
cplusplus-practice/language_features/boost/: multi_index_container.h
cplusplus-practice/language_features/curiously_recurring_template_pattern/: CRTP_singleton.h  CRTP_static_polymorphism.h
cplusplus-practice/language_features/d_pointer/: d_pointer.cpp  d_pointer.h  d_pointer_impl.h
cplusplus-practice/language_features/std/iterator/: back_inserter.h
cplusplus-practice/oop_design/: call_center.h  food_delivery.h  parking_lot.h
(+6 files in other folders)
