cmake_minimum_required(VERSION 3.6)
project(cplusplus_practice)

set(CMAKE_CXX_STANDARD 11)

include_directories(language_features)
set(SOURCE_FILES main.cpp language_features/curiously_recurring_template_pattern/CRTP_static_polymorphism.h language_features/curiously_recurring_template_pattern/CRTP_singleton.h language_features/d_pointer/d_pointer.h language_features/d_pointer/d_pointer_impl.h language_features/d_pointer/d_pointer.cpp competitive_programming/convert_base.h competitive_programming/convert_binary_tree_double_linkedlist.h competitive_programming/invert_binary_search_tree.h competitive_programming/coin_change.h competitive_programming/minimum_coin_change.h competitive_programming/binary_gap.h competitive_programming/odd_occurrences_in_array.h competitive_programming/perm_missing_elem.h competitive_programming/missing_integer.h competitive_programming/max_counters.h competitive_programming/min_max_division.h)
add_executable(cplusplus_practice ${SOURCE_FILES})